--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Anasua Sarkar</title>
+		<title>Samriddhi Sarkar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,9 +24,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"  style="width: 150px; height: 150px;"><img src="images/My Img.jpeg" alt="" /></a>
-					<h2><strong>I am Anasua</strong>, A Data Analyst<br />
-					and A Web Developer<br />
+					<a href="#" class="image avatar"  style="width: 150px; height: 150px;"><img src="images/Diya.jpeg" alt="" /></a>
+					<h2><strong>I am Sam</strong>,Welcome<br />
+					to my Art Portfolior<br />
 					 <a href=""></a></h1>
 				</div>
 			</header>
