Update header content and image dimensions

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"  style="width: 150px; height: 150px;"><img src="images/Diya.jpeg" alt="" /></a>
-					<h2><strong>I am Sam</strong>,Welcome<br />
-					to my Art Portfolior<br />
+					<a href="#" class="image avatar"  style="width: 150px; height:250px;"><img src="images/Diya.jpeg" alt="" /></a>
+					<h2><strong>Hello,I am Sam</strong>,welcome<br />
+					to my Art Portfolio<br />
 					 <a href=""></a></h1>
 				</div>
 			</header>
