--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"  style="width: 150px; height: 250px;"><img src="images/Diya.jpeg" alt="" /></a>
+					<a href="#" class="image avatar"  style="width: 220px; height: 220px; object-fit: cover;"><img src="images/Diya.jpeg" alt="" /></a>
 					<h2><strong>Hello,I am Sam</strong>,welcome<br />
 					to my Art Portfolio<br />
 					 <a href=""></a></h1>
