Comment out 'Learn More' section in index.html

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 						
 							<ul class="actions">
 								 
-							 <li>
+							 <!-- <li>
 							    <button  onclick="toggle()"class="button">Learn More</button>
 								<!-- <a href="#" onclick="toggle()" class="button">Learn More</a>  -->
-								<div id="learnmore"style="display: none;">
-									<h2 style="color: wheat;">Learn More About Me</h2>
-<p>
+								<!-- <div id="learnmore"style="display: none;">
+									<h2 style="color: wheat;">Learn More About Me</h2> -->
+<!-- <p>
 With a background in computer science and  experience in education, I bring a unique blend of analytical thinking and clear communication to data analysis. My time as a computer science teacher sharpened my ability to evaluate performance, adapt strategies, and explain technical concepts in simple terms.
 </p>
 <p>
@@ -67,11 +67,11 @@ With a background in computer science and  experience in education, I bring a un
 <p>
 My goal? To make data work for people—simplifying the complex, guiding decisions, and creating real impact through clarity and precision.
 </p>
-<p> Download  <a href="doc\ANASUA_SARKAR (2).pdf " Download>my CV</a>Please </p>
+<p> Download  <a href="doc\ANASUA_SARKAR (2).pdf " Download>my CV</a>Please </p> -->
 
 								</div>
-							</li>
-						</ul>
+							</li> -->
+						<!-- </ul> -->
 					</section>
 
 				<!-- Two -->
