Update portfolio introduction from data analyst to art

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><strong>Welcome to my Data Analyst portfolio!</strong><br/>
-                               I’m a detail-oriented analyst with expertise in SQL, Python, Power BI, Tableau, and Excel. 
-                               I proficient in cleaning and visualising data, building insightful dashboards, 
-                                and applying statistical analysis to support smart, data-driven decisions.
+							<h2><strong>Welcome to my art project portfolio!</strong><br/>
+                               Art has always been a passion of mine, and whenever I get time I try to produce a few of my own pieces, as a hobby.
+								Here is a small display of my sketches and paintings.
+					
                                 </h2>
 
 						</header>
