--- a/index.html
+++ b/index.html
@@ -54,20 +54,7 @@
 								<!-- <a href="#" onclick="toggle()" class="button">Learn More</a>  -->
 								<!-- <div id="learnmore"style="display: none;">
 									<h2 style="color: wheat;">Learn More About Me</h2> -->
-<!-- <p>
-With a background in computer science and  experience in education, I bring a unique blend of analytical thinking and clear communication to data analysis. My time as a computer science teacher sharpened my ability to evaluate performance, adapt strategies, and explain technical concepts in simple terms.
-</p>
-<p>
- I recently earned a Business Data Analyst certificate from Netcom Training, marking a key step in my career comeback and reinforcing my passion for data and technology.
-</p>
-<p>Additionally, I have engaged in various projects and courses through LinkedIn Learning, which have allowed me to apply theoretical knowledge in practical settings. This hands-on experience has deepened my understanding of data analysis and enriched my skill set, making me well-prepared to tackle real-world challenges in the field.</p>
-<p>
- I apply those skills using tools like SQL, Python, Power BI, Tableau, and Excel to transform raw data into meaningful stories. I enjoy uncovering hidden trends, designing interactive dashboards, and supporting business intelligence through practical, actionable insights.
-</p>
-<p>
-My goal? To make data work for people—simplifying the complex, guiding decisions, and creating real impact through clarity and precision.
-</p>
-<p> Download  <a href="doc\ANASUA_SARKAR (2).pdf " Download>my CV</a>Please </p> -->
+
 <!-- 
 								</div>
 							</li> -->
@@ -80,12 +67,11 @@ My goal? To make data work for people—simplifying the complex, guiding decisio
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/Attrition.png" class="image fit thumb"></a> -->
-									<img src="images\fulls\Employee Attri.png" alt=""class="image fit thumb" />
-								<h3>HR-Attrition-Analysis-Tableau</h3>
-								<p>I'm excited to share mTableau project, which explores employee attrition using a range of insightful visualisations. 
-									The dashboard highlights key metrics and trends, helping HR teams understand the drivers behind turnover
+									<img src="images\fulls\Boat.jpg" alt=""class="image fit thumb" />
+								<h3></h3>
+								<p>
 									</p>
-								<a href="https://public.tableau.com/views/HRDataAnalysis_17265069186920/EmployeeAttritionReport?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"target="_blank"/>View Here</a>
+								<!-- <a href="https://public.tableau.com/views/HRDataAnalysis_17265069186920/EmployeeAttritionReport?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"target="_blank"/>View Here</a> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/Netflix.png"></a> -->
