--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/Attrition.png" class="image fit thumb"></a> -->
-									<img src="images\fulls\Boat.jpg" alt=""class="image fit thumb" />
+									<img src="images\fulls\Boat.JPG" alt=""class="image fit thumb" />
 								<h3></h3>
 								<p>
 									</p>
