--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/Netflix.png"></a> -->
-									<img src="images/fulls/Netflix cover page.jpg" alt=""  class="image fit thumb"/>
+									<img src="images/fulls/Boat.jpg" alt=""  class="image fit thumb"/>
 								<h3>NetFlix Trend and Viewer Behaiver Analysis</h3>
 								<p>Exploring Netflix through Data Visualization, leverages Tableau to analyze Netflix's extensive library of movies and TV shows.
 									 The objective is to uncover patterns and trends in the platform's content offerings through interactive dashboards. .</p>
