Update Netflix section with Village image
Replaced Netflix image and content with Village image and empty placeholders.

--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/Netflix.png"></a> -->
-									<img src="images/fulls/Boat.jpg" alt=""  class="image fit thumb"/>
-								<h3>NetFlix Trend and Viewer Behaiver Analysis</h3>
-								<p>Exploring Netflix through Data Visualization, leverages Tableau to analyze Netflix's extensive library of movies and TV shows.
-									 The objective is to uncover patterns and trends in the platform's content offerings through interactive dashboards. .</p>
-								<a href="https://public.tableau.com/views/Netflix_17322771280830/Dashboard1?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View Here</a>
+									<img src="images/fulls/Village.JPG" alt=""  class="image fit thumb"/>
+								<h3></h3>
+								<p></p>
+								<!-- <a href="https://public.tableau.com/views/Netflix_17322771280830/Dashboard1?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View Here</a> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/03.jpg" ></a> -->
