Update image source from Village.jpg to Boat.JPG

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/Netflix.png"></a> -->
-									<img src="images\fulls\Village.jpg" alt=""  class="image fit thumb"/>
+									<img src="images\fulls\Boat.JPG" alt=""  class="image fit thumb"/>
 								<h3></h3>
 								<p></p>
 								<!-- <a href="https://public.tableau.com/views/Netflix_17322771280830/Dashboard1?:language=en-GB&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank">View Here</a> -->
