--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							</article>
 							</article>  
 							<article class="col-6 col-12-xsmall work-item">
-								<img src="images/fulls/Mountain.jpg alt="" class="image fit thumb" />
+								<img src="images/fulls/Mountains.jpg" alt="" class="image fit thumb" />
 							
 								<h3></h3>
 								<p></p>
@@ -98,7 +98,7 @@
 							</article>
 							</article>  
 							<article class="col-6 col-12-xsmall work-item">
-								<img src="images/fulls/Eye.jpg alt="" class="image fit thumb" />
+								<img src="images/fulls/Eye.jpg" alt="" class="image fit thumb" />
 							
 								<h3></h3>
 								<p></p>
