--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							</article>
 							</article>  
 							<article class="col-6 col-12-xsmall work-item">
-								<img src="images/fulls/Miss Perfect.jpg" alt="" class="image fit thumb" />
+								<img src="images/fulls/Miss Perfect.JPG" alt="" class="image fit thumb" />
 							
 								<h3></h3>
 								<p></p>
