Fix image file extension from .JPG to .jpeg

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							</article>
 							
 							<article class="col-6 col-12-xsmall work-item">
-								<img src="images/fulls/Skull.JPG" alt="" class="image fit thumb" />
+								<img src="images/fulls/Skull.jpeg" alt="" class="image fit thumb" />
 							
 								<h3></h3>
 								<p></p>
